# sbsim

./: .coverage  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .pylintrc  404.html  Dockerfile  Dockerfile-2  INSTRUCTIONS.md  MAINTAINING.md  METADATA  Makefile  README.md  SBSIM_OVERVIEW.md  docker-entrypoint.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  python_files.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  deploy-docs.yml  docs.yml  pylint-presubmit.yml  setup-test.yaml
api/config/: index.html
api/environment/: index.html
api/models/: index.html
api/reward/: index.html
assets/javascripts/: mathjax_config.js
assets/stylesheets/: google-style.css
code-of-conduct/: index.html
contributing/: index.html
docs/: README.md  api.md  code-of-conduct.md  conf.py  contributing.md  docs-site.md  index.md  index.rst  mkdocs.yml  setup.md
docs-site/: index.html
docs/api/: config.md  dataset.md  environment.md  models.md  reinforcement_learning.md  reward.md  simulator.md
docs/setup/: docker.md  linux.md  mac.md
search/: search_index.json
setup/: index.html
setup/docker/: index.html
setup/linux/: index.html
setup/mac/: index.html
smart_control/: __init__.py  bad_formatting.py
smart_control/dataset/: BUILD  conftest.py  dataset.py  dataset_partition.py  dataset_partition_test.py  dataset_test.py  partition.py
smart_control/environment/: environment.py  environment_test.py  environment_test_utils.py
smart_control/llm/: llm_environment_test.py
smart_control/models/: BUILD  __init__.py  (+5 more)
(+266 files in other folders)
